--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ layout: default
                     {{ post.title }}
                     </h2>
                     <span class="">{{ post.date | date: "%b %-d, %Y" }}</span>
+	            <span class="point"> · </span>
+                    <span class="">{{ post.wc }}</span>
+	            <span class="point"> · </span>
+                    <span class="">{{ post.excerpt }}</span>
                   </a>
                 {% endif %}
               {% endfor %}
